@@ -3,8 +3,7 @@ The Nsubjettiness FastJet contrib was written and is maintained and developed by
    Jesse Thaler <jthaler@jthaler.net>
    Ken Van Tilburg <kenvt@stanford.edu>
    Christopher K. Vermilion <christopher.vermilion@gmail.com>
-
-with additional code development by TJ Wilkason <tjwilk@mit.edu>.
+   TJ Wilkason <tjwilk@mit.edu>
 
 Questions and comments should be directed to:  jthaler@jthaler.net.
 
